--- a/Lab 5/css/styles.css
+++ b/Lab 5/css/styles.css
@@ -5,7 +5,7 @@ body {
 }
 
 img {
-    max width: 70%;
+    max-width: 100%;
 }
 
 a {
@@ -13,7 +13,7 @@ a {
 }
 
 a:hover {
-    color:wheat
+    color:wheat;
     text-decoration: none;
 }
 
