--- a/Lab 6/css/styles.css
+++ b/Lab 6/css/styles.css
@@ -148,7 +148,5 @@ footer {
 
     main img {
         border-radius: 20px;
-        border: 4px solid wheat
+        border: 4px solid wheat;
     }
-
-}
