--- a/Final/css/styles.css
+++ b/Final/css/styles.css
@@ -11,6 +11,10 @@ img {
    align-items: center;
 }
 
+img.center {
+    text-align: center;
+}
+
 h1 {
     background-color: black;
     text-align: center;
@@ -45,6 +49,7 @@ a:hover {
 
 header {
     display: block;
+    text-align: center;
 }
 
 /* Mobile Styles */
@@ -172,6 +177,7 @@ footer {
    header {
        background-image: url(../images/bcrnd.jfif);
        padding: 150px 0;
+       text-align: center;
    }
    header h1 {
        font-size: 80px;
@@ -202,7 +208,8 @@ footer {
    }
 
    main img {
-       border-radius: 20px;
-       border: 4px solid wheat;
+       border-radius: 0px;
+       border: 4px solid whitesmoke;
+       text-align: center;
        }
    } }
